remove unused define